# synthetic-waves

./: .gitignore  .gitmodules  CMakeLists.txt  main.lua  test.lua
art/: world.psd
include/: graphics.h  linmath.h  lua_asset.h  lua_audio.h  lua_color.h  lua_font.h  lua_graphics.h  lua_include.h  lua_input.h  lua_math.h  lua_texture.h  lua_type.h  lua_util.h  lua_window.h  util.h  window.h
lualibs/ggj17/: aabb.lua  character.lua  enemyspawner.lua  main.lua  projectiles.lua  spriteanimation.lua  tableext.lua  world.lua
lualibs/lj2d/: audio.lua  events.lua  graphics.lua  input.lua  main.lua  texture.lua  window.lua
lualibs/lj2d/audio/: clip.lua  source.lua
lualibs/lj2d/graphics/: camera.lua  sprite.lua
src/: graphics.c  lua_asset.c  lua_audio.c  lua_color.c  lua_font.c  lua_graphics.c  lua_include.c  lua_input.c  lua_math.c  lua_texture.c  lua_type.c  lua_util.c  lua_window.c  main.c  util.c  window.c
tests/: assets.lua  color.lua  math.lua  type.lua
